--- a/client/fields.jade
+++ b/client/fields.jade
@@ -131,7 +131,7 @@ template(name='i')
     if classes.length
         img(src="https://img.icons8.com/#{gs.icon_theme}/48/000000/#{name}.png" class=classes title=title)
     else 
-        img.ui.miny.inline.image(src="https://img.icons8.com/#{gs.icon_theme}/48/000000/#{name}.png" class=classes title=title)
+        img.ui.mini.inline.image(src="https://img.icons8.com/#{gs.icon_theme}/48/000000/#{name}.png" class=classes title=title)
     //- img(src="https://img.icons8.com/plasticine/48/000000/#{name}.png" class=classes title=title)
 template(name='ioffice')
     img(src="https://img.icons8.com/office/48/000000/#{name}.png" class=classes title=title)
