--- a/client/styles.css
+++ b/client/styles.css
@@ -15,6 +15,7 @@ body {
 
 } */
 
+
 .add_model_doc {
     border-radius: 20px !important;
 }
@@ -87,7 +88,7 @@ body {
 }
 
 .image {
-    transition: transform 1s !important;
+    transition: all .5s !important;
 }
 
 #topnav {
@@ -101,8 +102,7 @@ body {
 
 .menu {
     border-radius: 10px !important;
-    transition: all 1s ease !important;
-
+    /* transition: all 1s ease !important; */
 }
 
 .card {
@@ -305,6 +305,19 @@ input.username_search{
     opacity: 1;
     border-width: 1px !important;
     border-color: #a67c00 !important;
+    box-shadow: 0 2px 5px 2px rgba(50, 50, 100, 0.1) !important;
+}
+
+input.member_search{
+    -webkit-border-radius: 25px !important; */
+    border-radius: 20px !important;
+    font-size: 150% !important;
+    /* margin-bottom: 5px !important;
+    margin-top: 5px !important; */
+    background: rgba(250, 250, 250, 0.9) !important;
+    opacity: 1;
+    border-width: 1px !important;
+    border-color: blue !important;
     box-shadow: 0 2px 5px 2px rgba(50, 50, 100, 0.1) !important;
 }
 
