--- a/client/users.jade
+++ b/client/users.jade
@@ -7,6 +7,38 @@ template(name='residents')
         each residents
             +resident
             
+template(name='members') 
+    .ui.left.icon.fluid.input
+        i.search.icon
+        input.member_search(type='text' placeholder='lookup gr+ member' autofocus='autofocus')
+    .ui.hidden.divider
+    .ui.centered.five.stackable.cards
+        each members
+            +member
+            
+template(name='member')                
+    .ui.card
+        .image
+            //- a(href="/user/#{username}/")
+            //- img(src="{{c.url image_id height=400 width=400 background='white' crop='pad'}}")
+            if kiosk_photo
+                img.ui.image(src="{{c.url kiosk_photo width=400 height=400 crop='fit'}}")
+            else if image_id
+                img.ui.image(src="{{c.url image_id width=400 height=400 crop='fit'}}")
+        .content
+            a(href="/user/#{username}/")
+                h2.ui.center.aligned.header #{first_name} #{last_name} 
+                .ui.small.header @#{username}
+            each five_tags
+                .ui.compact.small.circular.basic.button.person_tag(class=tag_class) 
+                    strong #{this}
+            +text_view key='first_name' label='First Name'
+            +text_view key='last_name' label='Last Name'
+            
+            
+            
+            
+            
 template(name='profiles')
     .ui.left.icon.fluid.input
         i.search.icon
