--- a/components/commerce/karma.jade
+++ b/components/commerce/karma.jade
@@ -67,7 +67,11 @@ template(name='karma_transactions_small')
         |karma transactions
     .ui.link.list
         each transactions
-            a.item(href="view_karma_transaction/#{_id}") #{from_username} to #{to_username} #{when}
+            a.item(href="view_karma_transaction/#{_id}")
+                | #{from_username} sent 
+                |#{karma_amount}
+                |to #{to_username} 
+                small #{when}
 
 
 template(name='view_karma_transaction')
@@ -150,8 +154,9 @@ template(name='received_karma')
         .ui.segment
             .ui.inline.header #{_author_username}
             |#{description}
+            +ismall name='tags'
             each tags
-                .ui.label #{this}
+                .ui.basic.label #{this}
             .ui.inline.header #{karma_amount}
                 i.yin.yang.icon
             .ui.small.header #{when}
@@ -177,3 +182,18 @@ template(name='send_user_karma')
     .ui.button.send_karma
         +i name='donation'
         |send karma    
+
+
+
+
+template(name='karma_leaderboard')
+    .ui.grey.header 
+        +i name='leaderboard'
+        |top karma
+    .smallscroll
+        each top_karma_users
+            .ui.small.header #{first_letter} #{last_initial} 
+                .ui.small.inline.header #{points}pts 
+                .ui.small.inline.header #{karma}karma
+                each three_tags
+                    .ui.small.basic.label #{this}
