--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -61,10 +61,10 @@ template(name='delta')
                             .ui.simple.dropdown.item
                                 strong #{current_delta.sort_key}
                                 i.dropdown.icon
-                                .menu
+                                .fluid.menu
                                     each fields
                                         .item.set_sort_key 
-                                            +ismall name=icon
+                                            //- +ismall name=icon
                                             |#{title}
                         .ui.compact.icon.button.set_sort_direction
                             if sorting_up
@@ -94,18 +94,18 @@ template(name='delta')
                             input(type='text' val=search_value)
                         &nbsp;
                         &nbsp;
-                        .ui.inline.small.header view
-                        .ui.compact.menu
-                            .ui.simple.dropdown.item
-                                |#{current_delta.view_mode}
-                                i.dropdown.icon
-                                .menu
-                                    +set_view_mode title='table' icon='table'
-                                    +set_view_mode title='list' icon='list'
-                                    +set_view_mode title='cards' icon='cards'
-                                    +set_view_mode title='items' icon='list'
-                                    +set_view_mode title='map' icon='map'
-                                    +set_view_mode title='graph' icon='graph'
+                        //- .ui.inline.small.header view
+                        //- .ui.compact.menu
+                        //-     .ui.simple.dropdown.item
+                        //-         |#{current_delta.view_mode}
+                        //-         i.dropdown.icon
+                        //-         .menu
+                        //-             +set_view_mode title='table' icon='table'
+                        //-             +set_view_mode title='list' icon='list'
+                        //-             +set_view_mode title='cards' icon='cards'
+                        //-             +set_view_mode title='items' icon='list'
+                        //-             +set_view_mode title='map' icon='map'
+                        //-             +set_view_mode title='graph' icon='graph'
                         //- .ui.stackable.four.column.grid
                         .scrolling    
                             each current_delta.result_ids
