--- a/components/delta/model.jade
+++ b/components/delta/model.jade
@@ -124,7 +124,7 @@ template(name='field_edit')
         +text_edit key='key'  direct=true label='key'           
         +text_edit key='field_type' direct=true label='Field Type'              
         +icon_edit key='icon' direct=true label='icon'              
-        +number_edit key='rank' label='rank' direct=true                 
+        +number_edit key='rank' label='rank' direct=true             
         +textarea_edit key='description' label='description' direct=true
         +single_doc_edit key='field_type' ref_model='field_type' label='field type' direct=true                 
         +multi_doc_edit key='view_roles' ref_model='role' label='view roles' direct=true icon='eye'          
@@ -132,6 +132,7 @@ template(name='field_edit')
         //- +text_edit key='ref_model' label='Reference Model' direct=true
         div
         +boolean_edit key='faceted' label='faceted' direct=true
+        +boolean_edit key='sortable' label='sortable' direct=true
         if is_ref  
             +single_doc_edit key='ref_model' ref_model='model' label='reference model' direct=true
         else if is_user_ref  
